--- a/src/style.css
+++ b/src/style.css
@@ -21,11 +21,20 @@ body{
 }
 
 /*main content*/
-
-.message{
-    font-size: 20px;
+.innerPlace{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    width: max(1500px,50%);
+    overflow: visible;
+    padding-left:1px;
 }
-
+.message{
+    display: flex;
+    font-size: 20px;
+    
+}
 
 #gridElements{
     display: flex;
@@ -33,7 +42,8 @@ body{
     flex-wrap: wrap;
     justify-content: space-between;
     align-content: space-around;
-    width: 100%;
+    
+    
 }
 .arrayElement{
     display: flex;
@@ -58,4 +68,23 @@ body{
     margin-top: 10px;
     background-color: goldenrod;
     box-shadow: 0px 0px 5px 0px black;
+}
+.resultbox{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+}
+.resultText{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+    text-align: center;
+    width: 80%;
+    height: 45px;
+    border-style: dotted;
+    background: rgb(189, 180, 180);    
 }
