--- a/src/style.css
+++ b/src/style.css
@@ -58,13 +58,13 @@ body{
     align-items: center;
     justify-content: center;
 }
-#executeButton{
+.executeButton{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 25px;
-    width: 50px;
+    width: 70px;
     margin-top: 10px;
     background-color: goldenrod;
     box-shadow: 0px 0px 5px 0px black;
